--- a/roles/fedcloud-catchall-ops/templates/cloud-info.env.j2
+++ b/roles/fedcloud-catchall-ops/templates/cloud-info.env.j2
@@ -4,7 +4,7 @@ OS_IDENTITY_PROVIDER=egi.eu
 OS_PROTOCOL={{ site.protocol | default('openid') }}
 CHECKIN_SECRETS_PATH=/etc/fedcloud/vos/
 CHECKIN_OIDC_TOKEN=https://aai.egi.eu/oidc/token
-CLOUD_INFO_CONFIG=/etc/fedcloud/cloud-info/{{ site.gocdb}}.yaml
+CLOUD_INFO_CONFIG=/etc/fedcloud/cloud-info/{{ filename }}.yaml
 SITE_NAME={{ site.gocdb }}
 AMS_TOKEN={{ ams_token }}
 AMS_PROJECT={{ ams_project }}
