--- a/image-sync/deploy/roles/catchall/templates/sync.conf.j2
+++ b/image-sync/deploy/roles/catchall/templates/sync.conf.j2
@@ -1,7 +1,7 @@
 [sync]
-appdb_token = {}
-sites_file = {}
+appdb_token = {{ appdb_token }}
+site_config_dir = {{ site_config_mountpoint }}
 
 [checkin]
-client_id = {}
-client_secret = {}
+client_id = {{ checkin.client_id }}
+client_secret = {{checkin.client_secret }}
