--- a/deploy/roles/catchall/templates/cloud-info.env.j2
+++ b/deploy/roles/catchall/templates/cloud-info.env.j2
@@ -1,7 +1,7 @@
 AMS_HOST={{ ams_host }}
 AMS_PROJECT={{ ams_project }}
 AMS_TOKEN={{ ams_token }}
-CHECKIN_OIDC_TOKEN={{ checkin_token_endpoint }}
+CHECKIN_OIDC_TOKEN={{ checkin.token_endpoint }}
 CHECKIN_SECRETS_PATH=/etc/egi/vos/
 CLOUD_INFO_CONFIG=/etc/egi/cloud-info/{{ filename }}.yaml
 OS_AUTH_TYPE=v3oidcaccesstoken
