--- a/deploy/roles/catchall/templates/cloud-info.env.j2
+++ b/deploy/roles/catchall/templates/cloud-info.env.j2
@@ -2,12 +2,12 @@ AMS_HOST="{{ ams_host }}"
 AMS_PROJECT="{{ ams_project }}"
 AMS_TOKEN="{{ ams_token }}"
 CHECKIN_OIDC_TOKEN="{{ checkin.token_endpoint }}"
-CHECKIN_SECRETS_PATH="/etc/egi/vos/""
+CHECKIN_SECRETS_PATH=/etc/egi/vos/
 CLOUD_INFO_CONFIG="/etc/egi/cloud-info/{{ filename }}.yaml"
-OS_AUTH_TYPE="v3oidcaccesstoken"
+OS_AUTH_TYPE=v3oidcaccesstoken
 OS_AUTH_URL="{{ site.endpoint }}"
-OS_IDENTITY_PROVIDER="egi.eu"
-OS_PROTOCOL={{ site.protocol | default('openid') }}"
+OS_IDENTITY_PROVIDER=egi.eu
+OS_PROTOCOL="{{ site.protocol | default('openid') }}"
 {% if "region" in site %}
 OS_REGION="{{ site.region }}"
 {% endif %}
