--- a/deploy/roles/catchall/templates/cloud-info.env.j2
+++ b/deploy/roles/catchall/templates/cloud-info.env.j2
@@ -8,7 +8,7 @@ OS_AUTH_TYPE=v3oidcaccesstoken
 OS_AUTH_URL={{ site.endpoint }}
 OS_IDENTITY_PROVIDER=egi.eu
 OS_PROTOCOL={{ site.protocol | default('openid') }}
-{% if region in site %}
+{% if "region" in site %}
 OS_REGION={{ site.region }}
 {% endif %}
 SITE_NAME={{ site.gocdb }}
