Add swift variables to the role

--- a/deploy/roles/catchall/templates/cloud-info.env.j2
+++ b/deploy/roles/catchall/templates/cloud-info.env.j2
@@ -12,3 +12,6 @@ OS_PROTOCOL={{ site.protocol | default('openid') }}
 OS_REGION={{ site.region }}
 {% endif %}
 SITE_NAME={{ site.gocdb }}
+SWIFT_SITE_NAME={{ swift.site }}
+SWIFT_VO_NAME={{ swift.vo }}
+SWIFT_CONTAINER_NAME={{ swift.container }}
