Use new cloud-info-provider for json

--- a/deploy/roles/catchall/templates/cloud-info.env.j2
+++ b/deploy/roles/catchall/templates/cloud-info.env.j2
@@ -4,6 +4,7 @@ AMS_TOKEN={{ ams_token }}
 CHECKIN_OIDC_TOKEN={{ checkin.token_endpoint }}
 CHECKIN_SECRETS_PATH=/etc/egi/vos/
 CLOUD_INFO_CONFIG=/etc/egi/cloud-info/{{ filename }}.yaml
+SITE_CONFIG=/etc/egi/cloud-info/site-{{ filename }}.yaml
 OS_AUTH_TYPE=v3oidcaccesstoken
 OS_AUTH_URL={{ site.endpoint }}
 OS_IDENTITY_PROVIDER=egi.eu
