Add registry configuration

--- a/deploy/roles/catchall/templates/sync.conf.j2
+++ b/deploy/roles/catchall/templates/sync.conf.j2
@@ -1,6 +1,9 @@
 [sync]
 appdb_token = {{ appdb_token }}
 site_config_dir = {{ site_config_mountpoint }}
+registry_user = {{ registry.user }}
+registry_password = {{ registry.password }}
+registry_project = {{ registry.project }}
 
 [checkin]
 client_id = {{ checkin.client_id }}
