Store json in container root with a unique name per endpoint

--- a/deploy/roles/catchall/templates/cloud-info.env.j2
+++ b/deploy/roles/catchall/templates/cloud-info.env.j2
@@ -13,3 +13,4 @@ SITE_NAME={{ site.gocdb }}
 SWIFT_SITE_NAME={{ swift.site }}
 SWIFT_VO_NAME={{ swift.vo }}
 SWIFT_CONTAINER_NAME={{ swift.container }}
+SITE_INFO_FILE={{ filename }}.json
