Work in progress

--- a/deploy/roles/catchall/templates/sync.conf.j2
+++ b/deploy/roles/catchall/templates/sync.conf.j2
@@ -1,5 +1,7 @@
-[sync]
+[discovery]
 site_config_dir = {{ site_config_mountpoint }}
+
+[sync]
 registry_user = {{ registry.user }}
 registry_password = {{ registry.password }}
 registry_project = {{ registry.project }}
