Force running the caso extraction

--- a/deploy/roles/catchall/templates/catchall.conf.j2
+++ b/deploy/roles/catchall/templates/catchall.conf.j2
@@ -9,3 +9,6 @@ registry_project = {{ registry.project }}
 [checkin]
 client_id = {{ checkin.client_id }}
 client_secret = {{checkin.client_secret }}
+
+[accounting]
+force_run = True
